# headset-controller

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
lib/egui-tao/: Cargo.toml
lib/egui-tao/src/: clipboard.rs  lib.rs  window_settings.rs
lib/glutin-tao/: Cargo.toml
lib/glutin-tao/src/: lib.rs  window.rs
lib/hc-foundation/: Cargo.toml
lib/hc-foundation/src/: lib.rs
lib/hc-notification/: Cargo.toml
lib/hc-notification/src/: lib.rs
lib/hc-system-audio/: Cargo.toml
lib/hc-system-audio/examples/: switch.rs
lib/hc-system-audio/src/: lib.rs
lib/hc-system-audio/src/platform/: mod.rs
lib/hc-system-audio/src/platform/unsupported/: mod.rs
lib/hc-system-audio/src/platform/windows/: com.rs  mod.rs  redirection.rs
old/renderer/: d3d11.rs  mod.rs
src/: audio.rs  config.rs  debouncer.rs  gui.rs  main.rs  notification.rs  policy.rs  tray.rs  util.rs
src/audio/: mod.rs
src/devices/: arctis_nova_7.rs  dummy.rs  mod.rs
src/framework/: mod.rs  runtime.rs
src/framework/runtime/: mod.rs  reactor.rs  window.rs
src/framework/window/: mod.rs
src/framework/window/graphics/: d3d11.rs  mod.rs  opengl.rs
src/renderer/: d3d11.rs  egui_glow_tao.rs  gl.rs  mod.rs
src/ui/: mod.rs  side_panel.rs
src/ui/central_panel/: headset.rs  mod.rs  profile.rs
