[package]
name = "headset-controller"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
# strip="symbols"
codegen-units=1

[features]
#directx = ["egui-d3d11"]
#opengl = ["glutin", "glow", "egui_glow", "glutin-tao"]
#default = ["opengl"]

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-error = "0.2"
color-eyre = "0.6"

tokio = { version = "1", features = ["full"]}

directories-next = "2"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
once_cell = "1"
futures-lite = "1"
crossbeam-utils = "0.8"
static_assertions = "1"
fixed-map = "0.9"
parking_lot = "0.12"
flume = "0.11"

async-hid = { git = "https://github.com/sidit77/async-hid.git"}
#async-hid = {path = "../async-hid"}

egui = "0.23"
raw-window-handle = "0.5"
egui-winit = "0.23"
winit = "0.28"

glutin = { version = "0.30" }
glow = { version = "0.12"}
egui_glow = { version = "0.23" }
glutin-winit = "0.3"

#egui-d3d11 = { git = "https://github.com/sidit77/egui-d3d11.git", optional = true}

[target."cfg(not(target_os = \"windows\"))".dependencies]
notify-rust = "4.7"
png = "0.17"

[target."cfg(target_os = \"windows\")".dependencies]
com-policy-config = "0.3"
widestring = "1"
winreg = "0.50"
dunce = "1"

[target."cfg(target_os = \"windows\")".dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Security",
    "Win32_System_Com_StructuredStorage",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Foundation_Collections",
    "Data_Xml_Dom",
    "UI_Notifications",
    "implement",
]

[target."cfg(target_os = \"windows\")".build-dependencies]
tauri-winres = "0.1"
ico = "0.3"