[package]
name = "headset-controller"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
# strip="symbols"
codegen-units=1

[features]
directx = ["egui-d3d11"]
opengl = ["glutin", "glow", "egui_glow", "glutin-winit"]
default = ["opengl"]

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-error = "0.2"
color-eyre = "0.6"

#tokio = { version = "1", features = ["full"]}

directories-next = "2"
serde = { version = "1", features = ["derive"] }
ron = "0.8"

once_cell = "1"
either = "1"
static_assertions = "1"
enum-iterator = "1"

fixed-map = "0.9"
flume = "0.11"
event-listener = "4"
oneshot = "0.1"
crossbeam-utils = "0.8"
parking_lot = "0.12"

futures-lite = "2"
async-io = "2"
async-executor = "1"
async-hid = { git = "https://github.com/sidit77/async-hid.git"}
#async-hid = {path = "../async-hid"}

betrayer = { git = "https://github.com/sidit77/betrayer.git" }

egui = "0.23"
raw-window-handle = "0.5"
egui-winit = "0.23"
winit = "0.28"

glutin = { version = "0.30", optional = true }
glow = { version = "0.12", optional = true}
egui_glow = { version = "0.23", optional = true }
glutin-winit = { version = "0.3", optional = true }

egui-d3d11 = { git = "https://github.com/sidit77/egui-d3d11.git", optional = true}
#egui-d3d11 = { path = "../egui-d3d11", optional = true}

[target."cfg(not(target_os = \"windows\"))".dependencies]
notify-rust = "4.7"
png = "0.17"

[target."cfg(target_os = \"windows\")".dependencies]
com-policy-config = "0.5"
widestring = "1"
winreg = "0.52"
dunce = "1"

[target."cfg(target_os = \"windows\")".dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Security",
    "Win32_System_Com_StructuredStorage",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Foundation_Collections",
    "Data_Xml_Dom",
    "UI_Notifications",
    "implement"
]

[target."cfg(target_os = \"windows\")".build-dependencies]
tauri-winres = "0.1"
ico = "0.3"