[package]
name = "glutin-tao"
version = "0.3.0"
authors = ["Kirill Chibisov <contact@kchibisov.com>"]
description = "Glutin bootstrapping helpers with winit"
keywords = ["windowing", "opengl", "winit"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rust-windowing/glutin"
edition = "2021"

[features]
default = ["egl", "glx", "wgl"]
egl = ["glutin/egl"]
glx = ["glutin/glx"]
wgl = ["glutin/wgl"]

[dependencies]
winit = { package="tao", version = "0.19", default-features = false }
glutin = { version = "0.30", default-features = false }
raw-window-handle = "0.5"

[build-dependencies]
cfg_aliases = "0.1.1"
