[package]
name = "hc-notification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hc-foundation = { path = "../hc-foundation" }
tracing = "0.1"

[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.52", features = [
    "Data_Xml_Dom",
    "Foundation_Collections",
    "UI_Notifications"
] }

[target."cfg(not(target_os = \"windows\"))".dependencies]
notify-rust = "4"