[package]
name = "hc-system-audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["switching-windows"]
switching-windows = ["com-policy-config"]

[dependencies]
hc-foundation = { path = "../hc-foundation" }

tracing = "0.1"

[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.52", features = [
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem"
] }
com-policy-config = { version = "0.5", optional = true }
widestring = "1"